pushing HTML (besides AI) and created js

--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-Howdy!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nathan's Personal Website</title>
+    <link id="theme" href="style.css" rel="stylesheet" type="text/css" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
+</head>
+<body>  
+
+    <!-- Navbar Section -->
+    <header class = "header">
+        <nav class = "nav">
+            <a href = "/resume/index.html">About Me</a>   
+            <a href = "/resume/Portfolio.html">Portfolio</a>
+            <a href = "/resume/Qual.html">Qualifications</a>
+            <a href = "/resume/Service.html">Service</a>
+            <a href = "/resume/AI.html">AI-Page</a>
+            <a><button id="flip-button">Flip Coin </button></a>
+            <span></span>
+        </nav>
+        
+    <!-- Coin Flip Section -->
+
+    </header>
+    <header class = "header2">
+        <div class="container">
+            <div class="coin" id="coin">
+                <div class="heads">
+                    <img src="head.png" alt="Heads"> 
+                </div>
+                <div class="tails">
+                    <img src="tail.png" alt="Tails">
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Hero Section -->
+
+    <main>
+        <section id = "hero">
+            <h1>The Bridge Between Dimensions <br /> Nathan Lee</h1>
+            <p>
+                ☀ CSCE at TAMU &ensp;&thinsp;&thinsp;&thinsp;&nbsp;☽ Coder, Artist, Cook<br/>
+                ☀ TA for CSCE222 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ☽ Driven to improve <br/>
+                ☀ 3.89 In-Major GPA &nbsp;&nbsp;&nbsp;&nbsp;☽ Enjoy your stay... <br/>
+            </p>
+            <h1>Flip the coin to cross dimensions</h1>           
+        </section>    
+    </main>
+
+    <!-- Link Section -->
+
+    <div class = "Links">
+        <a href="https://github.com/NathanL7" target="_blank">
+            <img src="gittamu.png" alt="GitHub" class="Link">
+        </a>
+        <a href="https://www.linkedin.com/in/nathan-lee-98318825b/" target="_blank">
+            <img src="linkedin.png" alt="LinkedIn" class="Link">
+        </a>
+    </div>
+
+    <!--Script-->
+    <script src="script.js"></script>
+</body>
+</html>
