--- a/Qual.html
+++ b/Qual.html
@@ -75,7 +75,7 @@
     <!-- Text Box Section -->
     
     <div class = "resume">
-        <img src ="roughresume.png" alt ="">
+        <img src ="resume2.png" alt ="">
         <div class="resume-box">
             <h2>Technical areas of interest: </h2>
             <p>- Artificial Intelligence/Machine Learning </p> 
