--- a/Qual.html
+++ b/Qual.html
@@ -24,19 +24,19 @@
             <span></span>
         </nav>
         
-    </header>
-    <header class = "header2">
-        <div class="container">
-            <div class="coin" id="coin">
-                <div class="heads">
-                    <img src="heads.svg" alt="Heads">
-                </div>
-                <div class="tails">
-                    <img src="tails.svg" alt="Tails">
-                </div>
-            </div>
-        </div>
-    </header>
+      </header>
+      <header class = "header2">
+          <div class="container">
+              <div class="coin" id="coin">
+                  <div class="heads">
+                      <img src="head.png" alt="Heads">
+                  </div>
+                  <div class="tails">
+                      <img src="tail.png" alt="Tails">
+                  </div>
+              </div>
+          </div>
+      </header>
 
     <!-- Image Scaling Section -->
 
