--- a/Service.html
+++ b/Service.html
@@ -28,10 +28,10 @@
         <div class="container">
             <div class="coin" id="coin">
                 <div class="heads">
-                    <img src="heads.svg" alt="Heads">
+                    <img src="head.png" alt="Heads">
                 </div>
                 <div class="tails">
-                    <img src="tails.svg" alt="Tails">
+                    <img src="tail.png" alt="Tails">
                 </div>
             </div>
         </div>
