implemented most of second style, updated basically everything

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-Page</title>
-    <link id="theme" href="style.css" rel="stylesheet" type="text/css" />
+    <link id="theme" href="style.css" rel="stylesheet" type="text/css" /> <!-- change back to href="style.css" -->
 
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
@@ -14,6 +14,7 @@
     
     <header class = "header">
         
+        <button id="navbutton" class="navbtn">☰</button>
         <nav class = "nav">
             <a href = "/resume/index.html">About Me</a>   
             <a href = "/resume/Portfolio.html">Portfolio</a>
@@ -115,6 +116,80 @@
         </div>
         </div>
     </div>
+
+    <!-- Style2 Portfolio -->
+
+    <section class = "port section" id = "port">
+        <div class = "port_container container">
+            <h2 class = "porttitle">
+                </span>PROJECTS / PROJECTS / PROJECTS / PROJECTS / PROJECTS / PROJECTS / PROJECTS /</span> 
+            </h2>
+                    <article class = "port_sect">
+                        <img src="aggie_codingclub_logo.jpg" alt = "image" class = "portimg">
+                        <h3 class = "projtitle">Aggies Compute</h3>
+                        <span class = "projinfo"></span>
+                        <p class="projdesc">
+                            This project was designed to assist students with computer-science-related math, similar to applications such as Wolfram Alpha.</br>
+                            With the help of like-minded programmers, we created multiple math algorithms and implemented them into a website. </br>
+                            This collaborative project helped me develop problem-solving, teamwork and introduced me to new coding concepts and languages.</br>
+                            Language(s) used: React, Tailwind/CSS(style), Typescript, Apollo-client (Connection)
+                        </p>
+                    </article>
+
+                    <article class = "port_sect">
+                        <img src="harris1.jpg" alt = "image" class = "portimg2">
+                        <h3 class = "projtitle">Image Scaling / Image Stitching Algorithm</h3>
+                        <span class = "projinfo"></span>
+                        <p class="projdesc">
+                            During this project, I created algorithms to scale individual images and stitch two images together. </br>
+                            In this project, I bolstered my coding skill in C++ and further understood concepts such as 2D array manipulation, algorithms, and input/output streams. </br>
+                            I expanded upon my knowledge of bilinear interpolation to implement the image scaling algorithm. </br>
+                            Throughout this experience, I also gained an understanding of Harris's corner detection algorithm for the creation of the image stitching algorithm.</br>
+                            Language(s) used: C++
+                        </p>
+                    </article>
+
+                    <article class = "port_sect">
+                        <img src="dungeon1.png" alt = "image" class = "portimg3">
+                        <h3 class = "projtitle">Dungeon Crawler Game</h3>
+                        <span class = "projinfo"></span>
+                        <p class="projdesc">
+                            In this project I developed a retro-style video game using concepts such as pointers and 2D dynamic arrays.</br>
+                            During the process of creating this video game, I sharpened my understanding of pointers, input/output streams, file traversal, memory allocataion and resizing/editing 2D dynamic arrays without risk of memory leaks.</br>
+                            This project also helped me learn the importance of creating test/edge cases, as I created my own levels that tested the accuracy, precision, and stability of the code.</br>
+                            Language(s) used: C++
+                        </p>
+                    </article>
+
+                    <article class = "port_sect">
+                        <img src="rackylogo.png" alt = "image" class = "portimg4">
+                        <h3 class = "projtitle">Custom Language Interpreter for "MUPL"</h3>
+                        <span class = "projinfo"></span>
+                        <p class="projdesc">
+                            This project is centered around "MUPL", a Made Up Programming Language (hence the name MUPL) that has the basic functionality of common coding languages. </br>
+                                I created a functional, statically typed language with functions, closures, and many different data types.</br>
+                                Additionally, I made error handling, function calling, recursion, and let expressions all compatible for this custom language all using Racket as a foundation for my language.</br>
+                                Due to my deep understanding of programming language concepts, I created hall of fame functions and complex algorithms to test my "MUPL" language.</br>
+                                Language(s) used: Racket, "MUPL"
+                        </p>
+                    </article>
+
+                    <article class = "port_sect">
+                        <img src="tetriz.jpg" alt = "image" class = "portimg5">
+                        <h3 class = "projtitle">Tetris</h3>
+                        <span class = "projinfo"></span>
+                        <p class="projdesc">
+                            Using Ruby, I created the puzzle video game Tetris with a simple interface, buttons, and a score counter.</br>
+                            While working on this project, I developed my knowledge of Object Oriented Programming by working with classes, </br>
+                            subclasses, and dynamic dispatch.</br>
+                            Language(s) used: Ruby
+                        </p>
+                    </article>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <!--Script-->
     <script src="script.js"></script>
