--- a/Service.html
+++ b/Service.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,7 @@
     <!-- Navbar Section -->
     
     <header class = "header">
+        <button id="navbutton" class="navbtn">☰</button>
         <nav class = "nav">
             <a href = "/resume/index.html">About Me</a>   
             <a href = "/resume/Portfolio.html">Portfolio</a>
@@ -71,6 +72,36 @@
             </div>
         </div>
     </div>
+
+    <section class = "serv section" id = "serv">
+        <div class = "serv_container container">
+            <h2 class = "servtitle">
+                </span>SERVICE / SERVICE / SERVICE / SERVICE / SERVICE / SERVICE / SERVICE / SERVICE / </span> 
+            </h2>
+            <div class = "chooser">
+                <div>
+                    <article class = "serv_sect1">
+                        <img src="YMSL.jpg" alt = "image" class = "portimg">
+                        <h3 class = "servtitle">YMSL Volunteering</h3>
+                        <p class="servdesc">
+                            - 200+ hours volunteering for various non-profit organizations focused on helping people in need or educating future generations.</br> 
+                            - Graciously given multiple awards that showcase the heart and dedication to serve others. </br>
+                            - Organizations helped: Perot Museum, Metrocrest, Jewish Family Service, Bonton Farms, Feed My Starving Children, North Texas Food Bank, etc.
+                        </p>
+                    </article>
+
+                    <article class = "serv_sect2">
+                        <img src="Tamu.png" alt = "image" class = "servimg2">
+                        <h3 class = "servtitle">Undergraduate Teaching Assistant</h3>
+                        <p class="servdesc">
+                            In this role, I worked as an Undergraduate Teaching Assistant in the Discrete Structures for Computing course at Texas A&M University (CSCE 222). Throughout the semester I fostered a productive learning environment for my students by hosting biweekly office hours, and review sessions. This gave me the opportunity to further my connections with driven, like-minded students and allowed them to excel in their studies. Additionally, I created an extensive review video containing relevant exam content utilized by many students in the class. I assisted the professor with grading tests, homework, and quizzes and provided positive, productive feedback to each student. My favorite part of this role was cultivating unique and challenging test questions for each exam that assessed the class's overall performance.
+                        </p>
+                    </article>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <!--Script-->
     <script src="script.js"></script>
