"Final" draft for career fair, might update first style to look better but I'm proud of my product

--- a/AI.html
+++ b/AI.html
@@ -13,10 +13,10 @@
         <h1>AI-Page</h1>
         <nav>
             <ul>
-                <li><a href="/resume/index.html">About Me</a></li>
-                <li><a href="/resume/Portfolio.html">Portfolio</a></li>
-                <li><a href="/resume/Qual.html">Qualifications</a></li>
-                <li><a href="/resume/Service.html">Service</a></li>
+                <li><a href="/index.html">About Me</a></li>
+                <li><a href="/Portfolio.html">Portfolio</a></li>
+                <li><a href="/Qual.html">Qualifications</a></li>
+                <li><a href="/Service.html">Service</a></li>
             </ul>
         </nav>
     </header>
@@ -29,7 +29,12 @@
         <section id="prompt">
             <h2>Prompt</h2>
             <div class="prompt-box">
-                <p>code me a professional webpage using html, CSS, and javascript related to cooking</p>
+                <p>code me a professional webpage using html, CSS, and javascript related to cooking </br>
+                write a short description about the page underneath the "Welcome to my AI-powered cooking related section."</br>
+                embed these links under the recipes and create short descriptions for these videos, one about Gordon Ramsey's steak recipe and one about teriyaki chicken with homemade teriyaki sauce and broccolini </br>
+                the links: https://www.youtube.com/watch?v=AmC9SmCBUj4&feature=youtu.be, https://www.youtube.com/watch?v=t-Hj2pILMz4&feature=youtu.be </br>
+                put in the about my cooking journey section a small description about my journey as a cook starting from the pandemic. put a short message after sharing my excitement to share my recipes 
+                </p>
             </div>
         </section>
         <section id="recipes">
