--- a/AI.html
+++ b/AI.html
@@ -13,10 +13,10 @@
         <h1>AI-Page</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">About Me</a></li>
-                <li><a href="/Portfolio.html">Portfolio</a></li>
-                <li><a href="/Qual.html">Qualifications</a></li>
-                <li><a href="/Service.html">Service</a></li>
+                <li><a href="index.html">About Me</a></li>
+                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="Qual.html">Qualifications</a></li>
+                <li><a href="Service.html">Service</a></li>
             </ul>
         </nav>
     </header>
