--- a/Portfolio.html
+++ b/Portfolio.html
@@ -24,11 +24,11 @@
         
         <button id="navbutton" class="navbtn">☰</button>
         <nav class = "nav">
-            <a href = "/index.html">About Me</a>   
-            <a href = "/Portfolio.html">Portfolio</a>
-            <a href = "/Qual.html">Qualifications</a>
-            <a href = "/Service.html">Service</a>
-            <a href = "/AI.html">AI-Page</a>
+            <a href = "index.html">About Me</a>   
+            <a href = "Portfolio.html">Portfolio</a>
+            <a href = "Qual.html">Qualifications</a>
+            <a href = "Service.html">Service</a>
+            <a href = "AI.html">AI-Page</a>
             <a><button id="flip-button">Flip Coin </button></a>
             <span></span>
         </nav>
