--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nathan's Personal Website</title>
     <link id="theme" href="style.css" rel="stylesheet" type="text/css" />
-    <script>
-        
-        (function() {
-            var themestore = localStorage.getItem("theme");
-            if (themestore) {
-                document.querySelector("link#theme").href = themestore;
-            }
-        })();
-    </script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+ylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>  
