new menu symbol

--- a/Qual.html
+++ b/Qual.html
@@ -13,7 +13,7 @@
     <!-- Navbar Section -->
     
     <header class = "header">
-      <button id="navbutton" class="navbtn">☰</button>
+      <button id="navbutton" class="navbtn">|||</button>
       <nav class = "nav">
         <a href = "index.html">About Me</a>   
         <a href = "Portfolio.html">Portfolio</a>
