--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Navbar Section -->
     <header class = "header">
-        <button id="navbutton" class="navbtn">☰</button>
+        <button id="navbutton" class="navbtn">|||</button>
         <!-- NAVBAR -->
 
         <nav class = "nav">
