--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,7 +14,7 @@
     
     <header class = "header">
         
-        <button id="navbutton" class="navbtn">☰</button>
+        <button id="navbutton" class="navbtn">|||</button>
         <nav class = "nav">
             <a href = "index.html">About Me</a>   
             <a href = "Portfolio.html">Portfolio</a>
